--- a/doma/doma.csproj
+++ b/doma/doma.csproj
@@ -165,8 +165,59 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201506120814369_Init.cs" />
+    <Compile Include="Migrations\201506120814369_Init.Designer.cs">
+      <DependentUpon>201506120814369_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201506120820311_m1.cs" />
+    <Compile Include="Migrations\201506120820311_m1.Designer.cs">
+      <DependentUpon>201506120820311_m1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AspNetRole.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUser.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserClaim.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AspNetUserLogin.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ChiTietDonHang.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\C__MigrationHistory.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DBModal.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModal.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DBModal.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DBModal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DBModal.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DonHang.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\SanPham.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>DBModal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -228,6 +279,7 @@
     <Content Include="Content\dist\js\pages\dashboard2.js" />
     <Content Include="Content\my_css.css" />
     <Content Include="Content\my_img\anh1.jpg" />
+    <Content Include="Content\my_img\anh2.jpg" />
     <Content Include="Content\plugins\bootstrap-slider\bootstrap-slider.js" />
     <Content Include="Content\plugins\bootstrap-slider\slider.css" />
     <Content Include="Content\plugins\bootstrap-wysihtml5\bootstrap3-wysihtml5.all.min.js" />
@@ -738,6 +790,23 @@
     <Content Include="Content\plugins\ckeditor\skins\moono\readme.md" />
     <Content Include="Content\plugins\input-mask\phone-codes\phone-be.json" />
     <Content Include="Content\plugins\input-mask\phone-codes\phone-codes.json" />
+    <EntityDeploy Include="Models\DBModal.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DBModal.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\DBModal.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBModal.edmx</DependentUpon>
+      <LastGenOutput>DBModal.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\DBModal.edmx.diagram">
+      <DependentUpon>DBModal.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\DBModal.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DBModal.edmx</DependentUpon>
+      <LastGenOutput>DBModal.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -782,6 +851,7 @@
     <Content Include="Views\Shared\_header_menu.cshtml" />
     <Content Include="Views\Shared\_main_sidebar.cshtml" />
     <Content Include="Views\Shared\_footer.cshtml" />
+    <Content Include="Views\Home\_gio_hang_modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -795,6 +865,14 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201506120814369_Init.resx">
+      <DependentUpon>201506120814369_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506120820311_m1.resx">
+      <DependentUpon>201506120820311_m1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
