--- a/doma/doma.csproj
+++ b/doma/doma.csproj
@@ -192,6 +192,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\adminController.cs" />
     <Compile Include="Models\AspNetRole.cs">
       <DependentUpon>DBModal.tt</DependentUpon>
     </Compile>
@@ -847,6 +848,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="state_of_donhang.txt" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -881,6 +883,8 @@
     <Content Include="Views\Cart\thongtin.cshtml" />
     <Content Include="Views\Cart\xacnhan.cshtml" />
     <Content Include="Views\Cart\thankyou.cshtml" />
+    <Content Include="Views\Cart\history.cshtml" />
+    <Content Include="Views\admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
