--- a/doma/doma.csproj
+++ b/doma/doma.csproj
@@ -192,7 +192,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\adminController.cs" />
+    <Compile Include="Controllers\adminController.cs" />
     <Compile Include="Models\AspNetRole.cs">
       <DependentUpon>DBModal.tt</DependentUpon>
     </Compile>
@@ -840,6 +840,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\my_js\admin_addproduct.js" />
     <Content Include="Scripts\my_js\cart_controller.js" />
     <Content Include="Scripts\my_js\cart_index_controller.js" />
     <Content Include="Scripts\my_js\cart_xacnhan_controller.js" />
@@ -885,6 +886,10 @@
     <Content Include="Views\Cart\thankyou.cshtml" />
     <Content Include="Views\Cart\history.cshtml" />
     <Content Include="Views\admin\Index.cshtml" />
+    <Content Include="Views\admin\addproduct.cshtml" />
+    <Content Include="Views\admin\editproduct.cshtml" />
+    <Content Include="Views\admin\chitietdonhang.cshtml" />
+    <Content Include="Views\admin\userinfor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
