--- a/doma/doma.csproj
+++ b/doma/doma.csproj
@@ -951,6 +951,7 @@
     <Content Include="Scripts\my_js\cart_controller.js" />
     <Content Include="Scripts\my_js\cart_index_controller.js" />
     <Content Include="Scripts\my_js\cart_xacnhan_controller.js" />
+    <Content Include="Scripts\my_js\detail_properties.txt" />
     <Content Include="Scripts\my_js\home\home_bosanpham_controller.js" />
     <Content Include="Scripts\my_js\home\home_index_controller.js" />
     <Content Include="Scripts\my_js\main_app.js" />
